libs/node/test/data/SMSHOME2/bad/bad3.ecf

# test for unterminate nopp

%nopp
  ignore everything in here
 